# parser_gemotest.ru

./: city.txt  file.xlsx  main.py  out_50_cities_styled.xlsx  pyproject.toml  table.py
data/: Izhevsk.json  abakan.json  achinsk.json  akhtubinsk.json  aleksandrov.json  aleksin.json  almetevsk.json  alushta.json  amursk.json  anapa.json  angarsk.json  anzorey.json  apatity.json  aprelevka.json  argun.json  arkhangelsk.json  arkhipo-osipovka.json  arzamas.json  asbest.json  astrakhan.json  aznakaevo.json  azov.json  babayurt.json  baksan.json  balakovo.json  balashikha.json  balashov.json  barnaul.json  belebey.json  belev.json  belgorod.json  belidzhi.json  belogorsk.json  beloozyerskiy.json  belorechensk.json  beloretsk.json  berezovskiy-kemerovskaya-oblast.json  birobidzhan.json  birsk.json  bogoroditsk.json  (+149 more)
